# Project/Project.WebApi/Dtos/UpdateUserDto.cs
@@ -1,10 +1,0 @@
-﻿namespace Project.WebApi.Dtos
-{
-    public class UpdateUserDto
-    {
-        public string UserName { get; set; }
-        public string Email { get; set; }
-        public string PhoneNumber { get; set; }
-        public string FullName { get; set; }
-    }
-}
