# Project/Project.WebApi/Dtos/UserAdminDto.cs
@@ -1,11 +1,0 @@
-﻿
-namespace Project.WebAPI.Dtos
-{
-    public class UserAdminDto
-    {
-        public string Id { get; set; }
-        public string UserName { get; set; }
-        public string NormalizedUserName { get; set; }
-        public string Email { get; set; }
-    }
-}
