# Project/Project.WebApi/Dtos/UserLoginDto.cs
@@ -1,8 +1,0 @@
-namespace Project.WebAPI.Dtos
-{
-    public class UserLoginDto
-    {
-        public string UserName { get; set; }
-        public string Password { get; set; }
-    }
-}
